--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ mod.setProperty("forgeversion", "10.13.2.1291")
 
 mod.setProperty("id", "jeckelcraftingboardmod")
 mod.setProperty("name", "JeckelCraftingBoardMod")
-mod.setProperty("version", "1.2.0-alpha")
+mod.setProperty("version", "1.2.0-beta")
 
 dependencies
 {
